# app/serializers/address_serializer.rb
@@ -9,7 +9,8 @@ class AddressSerializer
       line1: address.line1,
       line2: address.line2,
       city: address.city,
-      state: address.state,
+      county: address.county,
+      nearest_town: address.nearest_town,
       postal_code: address.postal_code,
       country: address.country,
       latitude: address.latitude.to_f,
