# db/schema.rb
@@ -10,7 +10,7 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema[7.1].define(version: 2026_06_24_112415) do
+ActiveRecord::Schema[7.1].define(version: 2026_06_24_115557) do
   # These are extensions that must be enabled in order to support this database
   enable_extension "plpgsql"
 
@@ -18,13 +18,14 @@ ActiveRecord::Schema[7.1].define(version: 2026_06_24_112415) do
     t.string "line1", null: false
     t.string "line2"
     t.string "city", null: false
-    t.string "state"
+    t.string "county"
     t.string "postal_code"
     t.string "country"
     t.decimal "latitude", precision: 10, scale: 6, null: false
     t.decimal "longitude", precision: 10, scale: 6, null: false
     t.datetime "created_at", null: false
     t.datetime "updated_at", null: false
+    t.string "nearest_town"
   end
 
   create_table "delivery_events", force: :cascade do |t|
